# NEAT_Jax

./: .gitignore  Makefile  pyproject.toml
src/bprop/: bprop_utils.py  neat_bprop_batched.py  neat_wtbprop_batched.py  viz.py
src/jax_neat/: config.py  convert.py  policy.py
src/neat_core/: genome.py  mutation.py  neat.py  population.py  test_mutation.py  test_neat_xor.py  test_neat_xor_ask_tell.py  visualize.py
src/pipeline/: test_genome_forward.py  test_jax_convert.py  test_neat_policy_gym.py
src/slime/: neat_cpu.py  neat_cpu_jax.py  neat_evojax.py  neat_evojax_batched.py
