[project]
name = "neat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "imageio>=2.37.2",
    "jax>=0.8.1",
    "jaxlib>=0.8.1",
    "networkx>=3.6.1",
    "opencv-python>=4.12.0.88",
    "optax>=0.2.6",
    "slimevolleygym>=0.1.0",
]
